# ollama-mcp-bridge

./: README.md  api.py  main.py  mcp-config.json  mcp_manager.py  pyproject.toml  test_api.py  test_unit.py
.github/workflows/: test.yml
