[project]
name = "ollama-mcp-bridge"
version = "0.1.0"
description = "Bridge API service connecting Ollama with Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.10.15"
authors = [
    {name = "Jonathan Löwenstern"}
]

license = {text = "MIT"}
homepage = "https://github.com/jonigl/ollama-mcp-bridge"
repository = "https://github.com/jonigl/ollama-mcp-bridge"
documentation = "https://github.com/jonigl/ollama-mcp-bridge#readme"
keywords = ["mcp", "ollama", "bridge", "proxy", "api", "fastapi", "ai", "tools"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ollama>=0.3.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "requests>=2.31.0"
]

[project.scripts]
ollama-mcp-bridge = "main:cli_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
